Fixed drag on mobile

--- a/src/components/Routines/AddNode/AddNodeRoutine.module.css
+++ b/src/components/Routines/AddNode/AddNodeRoutine.module.css
@@ -29,7 +29,7 @@
 }
 
 .phaseTitle {
-  margin: 50px 0;
+  margin: 50px 0 25px;
   position: relative;
   text-align: center;
   user-select: none;
