--- a/src/components/Routines/VideoLinker.module.css
+++ b/src/components/Routines/VideoLinker.module.css
@@ -1,7 +1,7 @@
 .container {
   width: 70%;
   position: relative;
-  margin: 10px auto;
+  margin: 0 auto;
   z-index: 1;
   max-width: 500px;
 }
